Have form submit POST to calculator

--- a/static/postrate.html
+++ b/static/postrate.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <form>
-      <label for="weight">Item Weight:</label>
+      <label for="weight" action="pages/postrate.ejs" method="POST">Item Weight:</label>
       <input type="text" name="weight" step="any"><br>
       <input type="radio" id="stamped" name="item-type" value="stamped">
       <label for="male">Stamped Letter</label><br>
