Make form go to correct route 2

--- a/public/getrate.html
+++ b/public/getrate.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <form action="pages/postrate" method="POST">
+    <form action="postrate" method="POST">
       <label for="weight">Item Weight:</label>
       <input type="text" name="weight" step="any"><br>
       <input type="radio" id="stamped" name="itemType" value="stamped">
